Added portfolio git link

--- a/index.html
+++ b/index.html
@@ -72,10 +72,20 @@
         <div class="project-card">
           <!-- <img src="https://via.placeholder.com/300x200" alt="Project 1" /> -->
           <h3>Spotify Clone</h3>
-          <p>I have created a clone of Spotify using HTML5, CSS3, and Bootstrap.</p>
+          <p>
+            I have created a clone of Spotify using HTML5, CSS3, and Bootstrap.
+          </p>
           <div class="project-links">
-            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn">Live Demo</a>
-            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn">GitHub</a>
+            <a
+              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
+              class="btn"
+              >Live Demo</a
+            >
+            <a
+              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
+              class="btn"
+              >GitHub</a
+            >
           </div>
         </div>
         <div class="project-card">
@@ -84,7 +94,9 @@
           <p>I have created a Portfolio using HTML5, CSS3, and Bootstrap.</p>
           <div class="project-links">
             <a href="#" class="btn">Live Demo</a>
-            <a href="#" class="btn">GitHub</a>
+            <a href="https://github.com/ritvik-shrigaddi/Portfolio" class="btn"
+              >GitHub</a
+            >
           </div>
         </div>
       </div>
@@ -104,7 +116,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2024 Your Name. All rights reserved.</p>
+      <p>&copy; 2025 Made with ❤️ by Ritvik Shrigaddi. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
