Added Social Media Links

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
           I'm a Ritvik Shrigaddi <span class="typed-text"></span>
         </p>
         <div class="social-links">
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/ritvik-shrigaddi"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/ritvikshrigaddi/"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://x.com/Ritvik_3112"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </section>
