--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://www.linkedin.com/in/ritvikshrigaddi/"
             ><i class="fab fa-linkedin"></i
           ></a>
-          <a href="https://x.com/Ritvik_3112"><i class="fab fa-twitter"></i></a>
+          <!-- <a href="https://x.com/Ritvik_3112"><i class="fab fa-twitter"></i></a> -->
         </div>
       </div>
     </section>
