--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Navigation -->
     <nav class="navbar">
-      <div class="logo">Portfolio</div>
+      <div class="logo">Ritvik Shrigaddi</div>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
