--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,17 +14,25 @@
     <!-- Navigation -->
     <nav class="navbar">
       <div class="logo">Ritvik Shrigaddi</div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
+      <ul class="nav-links">
+        <li>
+          <a href="#home"><i class="fas fa-home"></i> Home</a>
+        </li>
+        <li>
+          <a href="#about"><i class="fas fa-user"></i> About</a>
+        </li>
+        <li>
+          <a href="#projects"><i class="fas fa-code"></i> Projects</a>
+        </li>
+        <li>
+          <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+        </li>
+      </ul>
     </nav>
 
     <!-- Hero Section -->
@@ -60,11 +68,23 @@
           </p>
           <div class="skills">
             <h3>Skills</h3>
-            <div class="skill-tags">
-              <span>HTML</span>
-              <span>CSS</span>
-              <span>JavaScript</span>
-              <span>Bootstrap</span>
+            <div class="skills-container">
+              <div class="skills-track">
+                <div class="skill-tags">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                  <span>Bootstrap</span>
+                  <span>C++</span>
+                </div>
+                <div class="skill-tags">
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                  <span>Bootstrap</span>
+                  <span>C++</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
