Modified little styeling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <!-- Navigation -->
+    Navigation
     <nav class="navbar">
       <div class="logo">Ritvik Shrigaddi</div>
       <div class="hamburger">
@@ -49,9 +49,6 @@
           <a href="https://www.linkedin.com/in/ritvikshrigaddi/"
             ><i class="fab fa-linkedin"></i
           ></a>
-          <!-- <a href="https://x.com/Ritvik_3112"
-            ><i class="fab fa-snapchat"></i
-          ></a> -->
         </div>
       </div>
     </section>
@@ -76,6 +73,7 @@
                   <span>JavaScript</span>
                   <span>Bootstrap</span>
                   <span>C++</span>
+                  <span>C</span>
                 </div>
                 <div class="skill-tags">
                   <span>HTML</span>
