Modified about me section

--- a/index.html
+++ b/index.html
@@ -70,28 +70,46 @@
       <div class="about-content">
         <div class="about-text">
           <p>
-            I am a passionate developer with experience in creating web
-            applications. I love to learn new technologies and solve complex
-            problems.
+            I am a passionate full-stack developer with a keen eye for creating
+            elegant solutions to complex problems. With a strong foundation in
+            both front-end and back-end technologies, I specialize in building
+            responsive and user-friendly web applications.
+          </p>
+          <p>
+            My journey in tech began with a deep curiosity about how things work
+            on the web. This curiosity has evolved into a professional career
+            where I combine technical expertise with creative problem-solving to
+            deliver exceptional digital experiences.
+          </p>
+          <p>
+            When I'm not coding, you can find me exploring new technologies,
+            contributing to open-source projects, or sharing my knowledge
+            through technical writing. I believe in continuous learning and
+            staying updated with the latest industry trends.
           </p>
           <div class="skills">
-            <h3>Skills</h3>
+            <h3>Technical Skills</h3>
             <div class="skills-container">
               <div class="skills-track">
                 <div class="skill-tags">
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>HTML5</span>
+                  <span>CSS3</span>
                   <span>JavaScript</span>
-                  <span>Bootstrap</span>
-                  <span>C++</span>
-                  <span>C</span>
+                  <span>React</span>
+                  <span>Node.js</span>
+                  <span>Python</span>
+                  <span>SQL</span>
+                  <span>Git</span>
                 </div>
                 <div class="skill-tags">
-                  <span>HTML</span>
-                  <span>CSS</span>
+                  <span>HTML5</span>
+                  <span>CSS3</span>
                   <span>JavaScript</span>
-                  <span>Bootstrap</span>
-                  <span>C++</span>
+                  <span>React</span>
+                  <span>Node.js</span>
+                  <span>Python</span>
+                  <span>SQL</span>
+                  <span>Git</span>
                 </div>
               </div>
             </div>
