--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                   <span>HTML5</span>
                   <span>CSS3</span>
                   <span>JavaScript</span>
-                  <span>React</span>
-                  <span>Node.js</span>
+                  <!-- <span>React</span>
+                  <span>Node.js</span> -->
                   <span>Python</span>
                   <span>SQL</span>
                   <span>Git</span>
