Modified Skills Section

--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
                   <span>JavaScript</span>
                   <!-- <span>React</span>
                   <span>Node.js</span> -->
-                  <span>Python</span>
-                  <span>SQL</span>
+                  <!-- <span>Python</span> -->
+                  <span>My-SQL</span>
                   <span>Git</span>
                 </div>
                 <div class="skill-tags">
                   <span>HTML5</span>
                   <span>CSS3</span>
                   <span>JavaScript</span>
-                  <span>React</span>
-                  <span>Node.js</span>
-                  <span>Python</span>
-                  <span>SQL</span>
+                  <!-- <span>React</span>
+                  <span>Node.js</span> -->
+                  <!-- <span>Python</span> -->
+                  <span>My-SQL</span>
                   <span>Git</span>
                 </div>
               </div>
