--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
       </p>
     </footer>
 
+    <div class="custom-alert" id="customAlert">
+      <div class="alert-content">
+        <i class="fas fa-check-circle"></i>
+        <p id="alertMessage"></p>
+        <button class="alert-btn" onclick="closeAlert()">OK</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
