Updated project boxes

--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                   <!-- <span>Python</span> -->
                   <span>My-SQL</span>
                   <span>Git</span>
-                </div>
-              </div>
+                      
+                    </p>
+                  </div>
+             </div>
             </div>
           </div>
         </div>
@@ -122,40 +124,33 @@
       <h2>My Projects</h2>
       <div class="project-grid">
         <div class="project-card">
+          <!-- <img src="spotify-clone.jpg" alt="Spotify Clone Project"> -->
           <h3>Spotify Clone</h3>
-          <p>
-            A modern clone of Spotify built with HTML5, CSS3, and Bootstrap,
-            featuring a responsive design and interactive UI elements.
-          </p>
+          <p>A modern clone of Spotify built with HTML5, CSS3, and Bootstrap, featuring a responsive design and interactive UI elements.</p>
+          <div class="project-tags">
+            <span class="project-tag">HTML5</span>
+            <span class="project-tag">CSS3</span>
+            <span class="project-tag">Bootstrap</span>
+            <span class="project-tag">Responsive</span>
+          </div>
           <div class="project-links">
-            <a
-              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
-              class="btn"
-              target="_blank"
-              >Live Demo</a
-            >
-            <a
-              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
-              class="btn"
-              target="_blank"
-              >GitHub</a
-            >
+            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn" target="_blank">Live Demo</a>
+            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn" target="_blank">GitHub</a>
           </div>
         </div>
         <div class="project-card">
+          <!-- <img src="portfolio.jpg" alt="Portfolio Project"> -->
           <h3>Portfolio</h3>
-          <p>
-            A modern, responsive portfolio website showcasing my work and
-            skills, built with HTML5, CSS3, and JavaScript.
-          </p>
+          <p>A modern, responsive portfolio website showcasing my work and skills, built with HTML5, CSS3, and JavaScript.</p>
+          <div class="project-tags">
+            <span class="project-tag">HTML5</span>
+            <span class="project-tag">CSS3</span>
+            <span class="project-tag">JavaScript</span>
+            <span class="project-tag">Responsive</span>
+          </div>
           <div class="project-links">
             <a href="#" class="btn" target="_blank">Live Demo</a>
-            <a
-              href="https://github.com/ritvik-shrigaddi/Portfolio"
-              class="btn"
-              target="_blank"
-              >GitHub</a
-            >
+            <a href="https://github.com/ritvik-shrigaddi/Portfolio" class="btn" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
