--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
           <a href="#about"><i class="fas fa-user"></i> About</a>
         </li>
         <li>
+          <a href="#services"><i class="fas fa-cogs"></i> Services</a>
+        </li>
+        <li>
+          <a href="#process"><i class="fas fa-tasks"></i> Process</a>
+        </li>
+        <li>
           <a href="#projects"><i class="fas fa-code"></i> Projects</a>
         </li>
         <li>
@@ -110,12 +116,95 @@
                   <!-- <span>Python</span> -->
                   <span>My-SQL</span>
                   <span>Git</span>
-                      
-                    </p>
-                  </div>
-             </div>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services" class="services">
+      <h2>My Services</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <i class="fas fa-code"></i>
+          <h3>Web Development</h3>
+          <p>
+            Custom website development with modern technologies and responsive
+            design.
+          </p>
+          <ul class="service-features">
+            <li>Responsive Design</li>
+            <li>Modern UI/UX</li>
+            <li>Cross-browser Compatibility</li>
+            <li>Performance Optimization</li>
+          </ul>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-paint-brush"></i>
+          <h3>UI/UX Design</h3>
+          <p>
+            Creating beautiful and intuitive user interfaces that enhance user
+            experience.
+          </p>
+          <ul class="service-features">
+            <li>User Research</li>
+            <li>Wireframing</li>
+            <li>Prototyping</li>
+            <li>Visual Design</li>
+          </ul>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-mobile-alt"></i>
+          <h3>Mobile-First Development</h3>
+          <p>
+            Building websites that work perfectly on all devices, starting with
+            mobile.
+          </p>
+          <ul class="service-features">
+            <li>Mobile Optimization</li>
+            <li>Touch-friendly Interfaces</li>
+            <li>Fast Loading Times</li>
+            <li>Progressive Web Apps</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="process" class="process">
+      <h2>My Work Process</h2>
+      <div class="process-steps">
+        <div class="step">
+          <div class="step-number">1</div>
+          <h3>Discovery</h3>
+          <p>
+            Understanding your needs, goals, and target audience through
+            detailed consultation.
+          </p>
+        </div>
+        <div class="step">
+          <div class="step-number">2</div>
+          <h3>Planning</h3>
+          <p>
+            Creating a detailed project roadmap and timeline for successful
+            delivery.
+          </p>
+        </div>
+        <div class="step">
+          <div class="step-number">3</div>
+          <h3>Development</h3>
+          <p>
+            Building your solution with clean, efficient, and maintainable code.
+          </p>
+        </div>
+        <div class="step">
+          <div class="step-number">4</div>
+          <h3>Launch</h3>
+          <p>
+            Thorough testing and smooth deployment to ensure everything works
+            perfectly.
+          </p>
         </div>
       </div>
     </section>
@@ -126,7 +215,10 @@
         <div class="project-card">
           <!-- <img src="spotify-clone.jpg" alt="Spotify Clone Project"> -->
           <h3>Spotify Clone</h3>
-          <p>A modern clone of Spotify built with HTML5, CSS3, and Bootstrap, featuring a responsive design and interactive UI elements.</p>
+          <p>
+            A modern clone of Spotify built with HTML5, CSS3, and Bootstrap,
+            featuring a responsive design and interactive UI elements.
+          </p>
           <div class="project-tags">
             <span class="project-tag">HTML5</span>
             <span class="project-tag">CSS3</span>
@@ -134,14 +226,27 @@
             <span class="project-tag">Responsive</span>
           </div>
           <div class="project-links">
-            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn" target="_blank">Live Demo</a>
-            <a href="https://github.com/ritvik-shrigaddi/Spotify-Clone" class="btn" target="_blank">GitHub</a>
+            <a
+              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
+              class="btn"
+              target="_blank"
+              >Live Demo</a
+            >
+            <a
+              href="https://github.com/ritvik-shrigaddi/Spotify-Clone"
+              class="btn"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
         <div class="project-card">
           <!-- <img src="portfolio.jpg" alt="Portfolio Project"> -->
           <h3>Portfolio</h3>
-          <p>A modern, responsive portfolio website showcasing my work and skills, built with HTML5, CSS3, and JavaScript.</p>
+          <p>
+            A modern, responsive portfolio website showcasing my work and
+            skills, built with HTML5, CSS3, and JavaScript.
+          </p>
           <div class="project-tags">
             <span class="project-tag">HTML5</span>
             <span class="project-tag">CSS3</span>
@@ -150,7 +255,12 @@
           </div>
           <div class="project-links">
             <a href="#" class="btn" target="_blank">Live Demo</a>
-            <a href="https://github.com/ritvik-shrigaddi/Portfolio" class="btn" target="_blank">GitHub</a>
+            <a
+              href="https://github.com/ritvik-shrigaddi/Portfolio"
+              class="btn"
+              target="_blank"
+              >GitHub</a
+            >
           </div>
         </div>
       </div>
