Updated service from app dev to web3 Services

--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
           </ul>
         </div>
         <div class="service-card">
-          <i class="fas fa-mobile-alt"></i>
-          <h3>Mobile-First Development</h3>
+          <i class="fas fa-cube"></i>
+          <h3>Web3 Development</h3>
           <p>
-            Building websites that work perfectly on all devices, starting with
-            mobile.
+            Building decentralized applications and smart contracts for the
+            future of the web.
           </p>
           <ul class="service-features">
-            <li>Mobile Optimization</li>
-            <li>Touch-friendly Interfaces</li>
-            <li>Fast Loading Times</li>
-            <li>Progressive Web Apps</li>
+            <li>Smart Contract Development</li>
+            <li>DApp Integration</li>
+            <li>Blockchain Solutions</li>
+            <li>Web3 Integration</li>
           </ul>
         </div>
       </div>
@@ -261,6 +261,23 @@
               target="_blank"
               >GitHub</a
             >
+          </div>
+        </div>
+        <div class="project-card">
+          <h3>NFT Marketplace</h3>
+          <p>
+            A decentralized NFT marketplace built with Solidity and React,
+            featuring minting, buying, and selling of NFTs.
+          </p>
+          <div class="project-tags">
+            <span class="project-tag">Solidity</span>
+            <span class="project-tag">React</span>
+            <span class="project-tag">Web3.js</span>
+            <span class="project-tag">Ethereum</span>
+          </div>
+          <div class="project-links">
+            <a href="#" class="btn" target="_blank">Live Demo</a>
+            <a href="#" class="btn" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
