Modified My work process section

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             href="https://github.com/ritvik-shrigaddi"
             target="_blank"
             aria-label="GitHub"
+            style="text-decoration: none"
           >
             <i class="fab fa-github"></i>
           </a>
